<resources>
    <string name="app_name">FINALFINALFINAL</string>
    <string name="LABEL">Feasta</string>
    <string name="app_intro">Welcome TO FEASTA. The one stop shop for all  you starving Johnnnies lookng to find events
    with free food.</string>
    <string name="emailHint">"St. John's Email"</string>
    <string name="passwordhint">Password</string>
    <string name="loginBtn">"Find Free Food"</string>
    <string name="newuserLink">"Want Free Food? Sign Up!!</string>
    <string name="forgotPassword">"Oh No!! Did You Forget Your Password?"</string>
    <string name="action_publish">Publish</string>
    <string name="action_go_back">Go Back</string>
    <string name="action_edit">Edit an Event</string>
    <string name="action_add">Create an Event</string>
    <string name="action_logout">Log out</string>
    <string name="likes_count_default">0 like</string>
    <string name="button_post_a_comment">Post</string>
    <string name="edittext_hint_add_a_comment">Add a comment</string>
    <string name="comments">Comments</string>
    <string name="comment_text">Comment Text</string>
    <string name="username">UserName</string>
    <string name="timestamp">Timestamp</string>
    <string-array name = "locations" >
        <item>DAC</item>
        <item>MAR</item>
        <item>SJH</item>
        <item>SUL</item>
        <item>SAH</item>
        <item>LIB</item>
        <item>LAW</item>
        <item>BEN</item>
        <item>CAR</item>
        <item>CCK</item>
        <item>UC</item>
        <item>Great Lawn</item>
        <item>President's Room</item>
        <item>Ozanam Lounge</item>
        <item>Admissions Welcome Ctr</item>
    </string-array>

</resources>
